test/golden/4696723118328775155.golden

INITIALPATH:7:22: error:
    • INITIALPATH:7:28:
  |
7 | main = putStrLn [fmt|{pi:.{/}}|]
  |                            ^
Parse error

    • In the quasi-quotation: [fmt|{pi:.{/}}|]
  |
7 | main = putStrLn [fmt|{pi:.{/}}|]
  |                      ^^^^^^^^^^^
